--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=debug,sysout
+log4j.rootLogger=debug
 
 # sysout log configuration
 log4j.appender.sysout=org.apache.log4j.ConsoleAppender
