--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,10 +16,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 8
+    - name: Set up JDK 6
       uses: actions/setup-java@v3
       with:
-        java-version: '1.8.0_281'
+        java-version: '1.6'
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
